  (Pierre Chambart, review by Gabriel Scherer)

* GPR#1617: Make string/bytes distinguishable in the bytecode.
  (Hugo Heuzard, reviewed by Nicolás Ojeda Bär)

### Runtime system:

- MPR#6411, GPR#1535: don't compile everything with -static-libgcc on mingw32,
  only dllbigarray.dll and libbigarray.a. Allows the use of C++ libraries which
  raise exceptions.
  (David Allsopp)

- GPR#1431: remove ocamlrun dependencies on curses/terminfo/termcap C library
  (Xavier Leroy, review by Daniel Bünzli)

- GPR#1478: The Spacetime profiler now works under Windows (but it is not yet
  able to collect profiling information from C stubs).
  (Nicolás Ojeda Bär, review by Xavier Leroy, Mark Shinwell)

- GPR#1483: fix GC freelist accounting for chunks larger than the maximum block
  size.
  (David Allsopp and Damien Doligez)

- GPR#1526: install the debug and instrumented runtimes
  (lib{caml,asm}run{d,i}.a)
  (Gabriel Scherer, reminded by Julia Lawall)

- GPR#1563: simplify implementation of LSRINT and ASRINT
  (Max Mouratov, review by Frédéric Bour)

- GPR#1644: remove caml_alloc_float_array from the bytecode primitives list
  (it's a native code primitive)
  (David Allsopp)

### Tools:

- MPR#7643, GPR#1377: ocamldep, fix an exponential blowup in presence of nested
  structures and signatures (e.g. "include struct … include(struct … end) … end")
  (Florian Angeletti, review by Gabriel Scherer, report by Christophe Raffalli)

- MPR#7710: `ocamldep -sort` should exit with nonzero code in case of
  cyclic dependencies
  (Xavier Leroy, report by Mantis user baileyparker)

- GPR#1585: optimize output of "ocamllex -ml"
  (Alain Frisch, review by Frédéric Bour and Gabriel Scherer)

- MPR#7687: deprecate -thread option, which is equivalent to -I +threads.
  (Nicolás Ojeda Bär, report by Daniel Bünzli)

- GPR#1667: add command-line options -no-propt, -no-version, -no-time,
  -no-breakpoint and -topdirs-path to ocamldebug
  (Sébastien Hinderer, review by Damien Doligez)
