@@ -77,6 +77,8 @@ CAMLexport struct caml_custom_table
 
 int caml_in_minor_collection = 0;
 
+double caml_extra_heap_resources_minor = 0;
+
 /* [sz] and [rsv] are numbers of entries */
 static void alloc_generic_table (struct generic_table *tbl, asize_t sz,
                                  asize_t rsv, asize_t element_size)
@@ -394,6 +396,7 @@ void caml_empty_minor_heap (void)
     clear_table ((struct generic_table *) &caml_ref_table);
     clear_table ((struct generic_table *) &caml_ephe_ref_table);
     clear_table ((struct generic_table *) &caml_custom_table);
+    caml_extra_heap_resources_minor = 0;
     caml_gc_message (0x02, ">");
     caml_in_minor_collection = 0;
     caml_final_empty_young ();
